--- a/source/_posts/基本类型.md
+++ b/source/_posts/基本类型.md
@@ -1,9 +1,7 @@
+---
 title: 基本类型
-tags:
-  - Kotlin
-  - 编程语言
-categories:
-  - Kotlin
+tags: Kotlin
+categories: 编程语言
 date: 2017-09-06 16:26:00
 ---
 ## 基本类型
