修改文章“基本类型”

--- a/source/_posts/基本类型.md
+++ b/source/_posts/基本类型.md
@@ -4,7 +4,7 @@ tags: Kotlin
 categories: 编程语言
 date: 2017-09-06 16:26:00
 ---
-## 基本类型
+![center](http://ovycuxkwi.bkt.clouddn.com/WechatIMG9.jpeg )
 ### 显式类型转换
 Kotlin中所有的东西都是对象。基本类型在Kotlin中也有特殊的内部表示类型，尽管这些类型是引用类型，但使用起来和Java中的基本类型基本类似。
 不同的是，Kotlin的特点是力求显式，所以不存在Java中自动向上转型这样的特性，所以不同基本类型的变量相互赋值时，仍需要做显式的类型转换。
@@ -15,7 +15,7 @@ val x: Int = n.toInt()
 ```
 <!-- more -->
 ### 字符类型
-字符类型用用`Char`表示。它不能像Java中一样直接当作数字，需要显式的转换为数字
+字符类型用`Char`表示。它不能像Java中一样直接当作数字，需要显式的转换为数字
 ```Kotlin
 fun check(c: Char){
     if(c.toInt() == 1){
@@ -29,6 +29,7 @@ fun check(c: Char){
 1. 库函数`arrayOf(1,2,3)`创建；
 2. 库函数`arrayOfNulls(5)`创建指定长度的空数组；
 3. 工厂函数`Array(5, { i -> (i * i).toString() })` 接收数组大小和一个函数参数
+
 ```Kotlin
 fun  创建数组(){
     val array = arrayOf(1,2,3)
